# sentinel-agent

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
design/: README.md  incident.html  index.html  postmortem.html  styles.css
docs/: api-contract.md  architecture.md  openapi.json  repro-cold-vs-warm.md
evals/: __init__.py  completeness.py  hallucination.py  incident_metrics.py  time_to_response.py
scripts/: repro_cold_vs_warm.py
sentinel/: __init__.py  constants.py  coordinator.py  events.py  scenarios.py
sentinel/agents/: __init__.py  eval_runner.py  postmortem.py  remediation.py  root_cause.py  schemas.py  trace_analyzer.py
sentinel/api/: __init__.py  events.py  incidents.py  main.py
sentinel/memory/: __init__.py  briefing.py  enforcement.py  self_introspection.py
sentinel/observability/: __init__.py  instrumentation.py  phoenix_mcp.py
sentinel/prompts/: __init__.py  coordinator.md  eval_runner.md  postmortem.md  remediation.md  root_cause.md  trace_analyzer.md
sentinel/tools/: __init__.py  incident_sim.py  phoenix_traces.py  run_eval.py
sentinel/ui/: __init__.py  app.py
tests/: conftest.py
tests/integration/: test_plan_determinism.py
tests/integration/api/: conftest.py  test_lifecycle.py  test_real_vertex.py
tests/unit/: test_scenarios.py
tests/unit/agents/: test_schemas.py
tests/unit/api/: conftest.py  test_events.py  test_incidents.py
tests/unit/coordinator/: test_chain_wrapper.py  test_end_to_end.py  test_end_to_end_events.py
tests/unit/evals/: test_completeness.py  test_incident_metrics.py
tests/unit/memory/: test_briefing.py  test_instruction.py  test_synthesizer.py
tests/unit/tools/: test_incident_sim.py  test_phoenix_traces.py
web/: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
web/app/incidents/[id]/: page.tsx
web/app/incidents/[id]/postmortem/: page.tsx
web/app/incidents/run/[scenarioId]/: page.tsx
web/components/: agent-stepper.tsx  determinism-bars.tsx  metric-card.tsx  postmortem-document.tsx  routing-callout.tsx  scenario-card.tsx  topbar.tsx
web/components/__tests__/: agent-stepper.test.tsx  postmortem-document.test.tsx  routing-callout.test.tsx
web/components/ui/: badge.tsx  button.tsx  card.tsx
web/lib/: api.ts  scenarios.ts  severity.ts  sse.ts  types.ts  utils.ts
web/lib/__tests__/: api.test.ts  scenarios.test.ts  sse.test.ts
web/tests-e2e/: README.md  fraud-scenario.spec.ts
