[project]
name = "sentinel"
version = "0.1.0"
description = "Multi-agent incident response for production AI in financial services"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "arize-phoenix>=16.0.0",
    "arize-phoenix-otel>=0.16.1",
    "fastapi>=0.115",
    "google-adk>=2.1.0",
    "google-cloud-aiplatform>=1.153.1",
    "httpx>=0.27",
    "openinference-instrumentation-google-adk>=0.1.15",
    "opentelemetry-exporter-otlp>=1.41.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "sse-starlette>=2.1",
    "streamlit>=1.57.0",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sentinel", "evals"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests that hit live Vertex AI + Phoenix MCP (skipped without GOOGLE_CLOUD_PROJECT)",
]
